# Sys-Prog-Labs

lab1/: .gitignore  Makefile  results.md  reverse.c  reverse.h  test_reverse.c
lab2/: Makefile  README.md  linked_list.c  linked_list.h  linked_list_test.c
lab3/: .gitignore  README.md
lab3/buf/: Makefile  buffer_asm.txt  exploit.c  exploit1.txt  exploit2.txt
lab3/traps/: README-ARM64.md  trap1  trap1.txt  trap1_objdump.txt  trap2  trap2.txt  trap2_objdump.txt
lab4/: .gitignore  Makefile  answers.md  iobench.h  matrixMultiply.c  w01-byte.c  w02-byte.c  w03-byte.c
lab5/: README.md  kernel.cc  p-allocator.cc
lab6/: README.md
lab6/multiProcs/: .gitignore  Makefile  revindex_procs.cpp
lab6/shell/: .gitignore  sh.cpp
lab7/: .gitignore  Makefile  README.md  revindex_threads.cpp
lab8/: .clang-format  .gitignore  README.md
lab8/1-move/: Makefile  move.c  move.rs
lab8/2-lifetimes/: Makefile  lifetimes.c  lifetimes.rs
lab8/3-concurrency/: Makefile  concurrency.cpp  concurrency.rs
lab8/4-message_passing/: Cargo.toml  Makefile  message_passing.rs
lab9/: .gitignore  CMakeLists.txt  setup.sh  todo.proto  todo_client.cc  todo_client.hh  todo_server.cc  todo_server.hh
