[package]
name = "message_passing"
version = "0.1.0"
authors = ["Paul Biberstein <biberstein.paul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"

[[bin]]
name = "message_passing"
path = "message_passing.rs"
